--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -13,3 +13,16 @@
     align-items: center;
     padding: 20px;
 }
+
+.form-container{
+    width: 80%;
+    border-radius: 8px;
+}
+
+body{
+    background-image: url("https://www.media-tics.com/fotos/8/prensaespaA_a11_thumb_400.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
