--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -17,10 +17,11 @@
 .form-container{
     width: 80%;
     border-radius: 8px;
+    text-align: center;
 }
 
 body{
-    background-image: url("https://www.media-tics.com/fotos/8/prensaespaA_a11_thumb_400.jpg");
+    background-image: url("https://media.istockphoto.com/id/1058384844/es/foto/mujer-sosteniendo-peri%C3%B3dicos-y-taza-de-caf%C3%A9-mirando-a-c%C3%A1mara.jpg?s=612x612&w=0&k=20&c=DqLOOK4d6uxw1nQ0h5Thxi6vXltzpKyS_buJa5WB3pM=");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -30,4 +31,5 @@ body{
 h1{
     background-color: #003366;
     color: white;
+    text-align: center;
 }
