--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -6,5 +6,6 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra suave */
     max-width: 400px; /* Ancho máximo */
     margin: 0 auto; /* Centrado horizontal */
-    margin-top: 130px;
+    margin-top: 50px;
+     /* Reducir el ancho máximo */
   }
