--- a/src/front/styles/profilecard.css
+++ b/src/front/styles/profilecard.css
@@ -21,7 +21,7 @@
 .editprofile {
     font-family: 'Quicksand';
     color: #ffffff;
-    width: 25rem;
+    width: 90%;
     background-color: #0044CC;
 }
 
