--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -8,15 +8,12 @@
     height: 60px;
 }
 
-
-.nav-icon {
-    margin-right: 30px; 
-    padding-top: 8px;
-    padding-left: 10px;
+.nav-icon{
+    padding-top: 20%;
 }
+
 
 .logo {
     height: 50px;
     width: 40px;
-    margin-right: 30px; 
 }
