--- a/src/front/styles/grid.css
+++ b/src/front/styles/grid.css
@@ -16,7 +16,7 @@
 }
 
 .trash{
-    border: 1px solid #000000;
     margin-left: 90px;
     margin-top: 10px;
+    filter: drop-shadow (0 0 10px rgba(0, 0, 0, .8) )
 }
