--- a/src/front/styles/grid.css
+++ b/src/front/styles/grid.css
@@ -1,6 +1,6 @@
 .col-4{
-    width: 8.5rem;
-    height: 8.5rem;
+    width: 32%;
+    aspect-ratio: 1;
     margin-inline: 1px;
     background-position: center;
     background-size: cover;
@@ -18,5 +18,6 @@
 .trash{
     margin-left: 90px;
     margin-top: 10px;
-    filter: drop-shadow (0 0 10px rgba(0, 0, 0, .8) )
+    filter:drop-shadow(0 0 10px rgba(0, 0, 0, .9) )
 }
+
