--- a/src/front/styles/card.css
+++ b/src/front/styles/card.css
@@ -23,3 +23,8 @@
     box-shadow: 0 5px #ffffff;
     transform: translateY(4px);
 }
+
+.like.p-2:active{
+    box-shadow: 0 5px #ffffff;
+    transform: translateY(4px);
+}
