--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,6 +1,6 @@
 /* 
     General Styles used on every website (Don't Repeat Yourself)
-*/
+
 :root {
     --mainBgColor: rgba(20, 20, 31, 11);
     --secondaryBgColor: rgba(27, 27, 39, 1);
@@ -34,7 +34,7 @@ body {
     margin: 20px auto;
 }
 
-/* Login & Register Pages */
+
 
 .auth--container {
     height: 100vh;
@@ -58,7 +58,7 @@ body {
 
 
 
-/* Form Input Styling */
+
 
 input[type="text"],
 input[type="password"],
@@ -77,7 +77,7 @@ textarea {
 }
 
 
-/* Button Styling */
+
 
 .btn {
     padding: 0.5em 1em;
@@ -104,7 +104,6 @@ textarea {
     opacity: 0.7;
 }
 
-/* Header Styling */
 
 #header--wrapper {
     background-color: var(--mainBgColor);
@@ -126,7 +125,7 @@ textarea {
     color: #8db3dd;
 }
 
-/* Room Styling */
+
 
 .room--container {
     padding: 2em;
@@ -169,7 +168,7 @@ textarea {
     width: fit-content;
     max-width: 100%;
     word-wrap: break-word;
-    /* added */
+ 
 }
 
 .message--body--owner {
@@ -191,4 +190,4 @@ textarea {
 
 .delete--btn:hover {
     color: red;
-}
+} */
