--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,6 +1,4 @@
 /* 
-    General Styles used on every website (Don't Repeat Yourself)
-*/
 :root {
     --mainBgColor: rgba(20, 20, 31, 11);
     --secondaryBgColor: rgba(27, 27, 39, 1);
@@ -35,6 +33,7 @@ body {
 }
 
 /* Login & Register Pages */
+/*
 
 .auth--container {
     height: 100vh;
@@ -59,7 +58,7 @@ body {
 
 
 /* Form Input Styling */
-
+/*
 input[type="text"],
 input[type="password"],
 input[type="email"],
@@ -78,7 +77,7 @@ textarea {
 
 
 /* Button Styling */
-
+/*
 .btn {
     padding: 0.5em 1em;
     border: none;
@@ -105,7 +104,7 @@ textarea {
 }
 
 /* Header Styling */
-
+/*
 #header--wrapper {
     background-color: var(--mainBgColor);
     padding: 1em;
@@ -127,7 +126,7 @@ textarea {
 }
 
 /* Room Styling */
-
+/*
 .room--container {
     padding: 2em;
     background-color: var(--secondaryBgColor);
@@ -170,6 +169,7 @@ textarea {
     max-width: 100%;
     word-wrap: break-word;
     /* added */
+/*
 }
 
 .message--body--owner {
@@ -192,3 +192,5 @@ textarea {
 .delete--btn:hover {
     color: red;
 }
+
+*/
