--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,6 +1,5 @@
-/* 
+/* General Styles used on every website (Don't Repeat Yourself) */
 
-    General Styles used on every website (Don't Repeat Yourself)
 
 :root {
     --mainBgColor: rgba(20, 20, 31, 11);
@@ -17,8 +16,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-        'Open Sans', 'Helvetica Neue', sans-serif;
+    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+        'Open Sans', 'Helvetica Neue', sans-serif; */
 }
 
 a {
@@ -36,7 +35,7 @@ body {
 }
 
 /* Login & Register Pages */
-/*
+
 
 .auth--container {
     height: 100vh;
@@ -61,7 +60,7 @@ body {
 
 
 /* Form Input Styling */
-/*
+
 
 input[type="text"],
 input[type="password"],
@@ -108,7 +107,7 @@ textarea {
 }
 
 /* Header Styling */
-/*
+
 #header--wrapper {
     background-color: var(--mainBgColor);
     padding: 1em;
@@ -130,7 +129,7 @@ textarea {
 }
 
 /* Room Styling */
-/*
+
 
 .room--container {
     padding: 2em;
@@ -174,7 +173,7 @@ textarea {
     max-width: 100%;
     word-wrap: break-word;
     /* added */
-/*
+
 }
 
 .message--body--owner {
@@ -197,6 +196,3 @@ textarea {
 .delete--btn:hover {
     color: red;
 }
-
-*/
-
