--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -24,10 +24,10 @@ a {
     color: #40e0d0;
 }
 
-body {
+/* body {
     background-color: var(--mainBgColor);
     color: var(--textColorMain);
-}
+} */
 
 .container {
     max-width: 600px;
@@ -36,7 +36,7 @@ body {
 
 /* Login & Register Pages */
 
-
+/* 
 .auth--container {
     height: 100vh;
     display: flex;
@@ -55,16 +55,16 @@ body {
     flex-direction: column;
     gap: 1em;
     padding: 0.5em 0;
-}
+} */
 
 
 
 /* Form Input Styling */
 
 
-input[type="text"],
+/* input[type="text"],
 input[type="password"],
-input[type="email"],
+input[type="email"], */
 textarea {
     background: var(--mainBgColor);
     border: none;
