--- a/src/front/styles/grid.css
+++ b/src/front/styles/grid.css
@@ -16,8 +16,13 @@
 }
 
 .trash{
-    margin-left: 90px;
+    margin-left: 80%;
     margin-top: 10px;
     filter:drop-shadow(0 0 10px rgba(0, 0, 0, .9) )
 }
 
+.filenew{
+    margin-left: 85%;
+    margin-top: 80px;
+    filter:drop-shadow(0 0 10px rgba(0, 0, 0, .9) )
+}
