--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -74,6 +74,8 @@ textarea::placeholder {
     flex-direction: column;
     gap: 0.2em;
     height: min-content;
+    margin-block-end: 15%;
+    margin-block-start: 15%;
 }
 
 .message--header {
@@ -111,7 +113,7 @@ textarea::placeholder {
 
 
 /* General container styling to ensure proper layout */
-.container {
+.chat-container {
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -176,6 +178,7 @@ textarea::placeholder {
 /* Navbar styling (fixed at the bottom) */
 #message--form {
     position: fixed;
+    height: 9%;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -192,6 +195,7 @@ textarea::placeholder {
 textarea {
     flex: 1;
     width: 100%;
+    height: 100%;
     resize: auto;
     /* Prevent resizing */
     padding: 1rem;
@@ -209,9 +213,9 @@ textarea {
     align-items: center;
 }
 
-.btn {
+.btnchat {
     padding: 0.5em 1em;
-    background-color: rgba(219, 26, 90, 1);
+    background-color: #002B80;
     color: white;
     border: none;
     border-radius: 3px;
@@ -219,6 +223,6 @@ textarea {
     transition: 0.3s;
 }
 
-.btn:hover {
+.btnchat:hover {
     opacity: 0.8;
 }
