--- a/src/front/styles/profilecard.css
+++ b/src/front/styles/profilecard.css
@@ -84,3 +84,19 @@
     width: 90%;
     background-color: #991818;
 }
+
+.addfriend{
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+    background-color: green;
+    margin-inline-start: 2%;
+}
+
+.addfriend:visited{
+    background-color: greenyellow;
+}
+
+.addfriend:active{
+    background-color: greenyellow;
+}
