--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,5 +1,8 @@
 /* General Styles used on every website (Don't Repeat Yourself) */
 
+ul {
+    list-style-type: none;
+}
 
 :root {
     --mainBgColor: #065bf0;
@@ -18,6 +21,7 @@
     box-sizing: border-box;
 
 }
+
 
 a {
     color: #40e0d0;
