--- a/src/front/styles/card.css
+++ b/src/front/styles/card.css
@@ -39,7 +39,7 @@
  }
 
  .title.comments{
-    background-color: #00148d;
+    background-color: #0044cc;
  }
 
  .text-light.d-flex.align-items-center.justify-content-between{
@@ -56,7 +56,7 @@
  }
 
  .me-3{
-   background-color: #00148d;
+   background-color: #0044;
  }
 
  .form-control::placeholder {
